Fixes overflowing grid view modules

--- a/src/css/dashboard/Mod.css
+++ b/src/css/dashboard/Mod.css
@@ -10,6 +10,9 @@
 
 .mod-grid {
   align-items: center;
+  width: 100%;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 .mod-list {
